--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,6 +1,24 @@
 ---
-title: Documentation
-description: Welcome to the documentation
+title: SilkUI Docs
+description: Minimal landing for SilkUI docs
 ---
 
-Welcome to the documentation.
+# SilkUI Docs
+
+Search the docs:
+
+<div className="my-4">
+  <input
+    type="search"
+    placeholder="Search..."
+    className="w-full max-w-md rounded-md border border-gray-300 bg-white px-3 py-2 text-sm text-gray-900 shadow-sm focus:border-black focus:outline-none dark:border-gray-700 dark:bg-neutral-900 dark:text-gray-100"
+  />
+</div>
+
+Hello world example:
+
+```tsx
+export default function HelloWorld() {
+  return <div>Hello, world!</div>;
+}
+```
